Fixed issue with tooltip on iOS
Resolves #234

--- a/flask_site/static/main.css
+++ b/flask_site/static/main.css
@@ -505,7 +505,7 @@ DIV.claim_profile > .discord_info {
 
 .tooltip .tooltiptext {
     visibility: hidden;
-    width: 120px;
+    width: auto;
     background-color: black;
     color: wheat;
     text-align: center;
